<resources>
    <string name="app_name">ReminderApp</string>
    <string name="enter_reminder_name">Enter reminder</string>
    <string name="stub" translatable="false">STUB!</string>
    <string name="count_stub" translatable="false">1</string>
    <string name="enter_reminder_description">Enter reminder description</string>
    <string name="periodic_reminder">Periodic reminder</string>
    <string name="onetime_reminder">One time reminder</string>
    <string name="choose_time">Choose a time</string>
    <string name="save">Save</string>
    <string name="time_expired">Time expired</string>
    <string name="postpone">Postpone</string>
    <string name="dismiss">Dismiss</string>
    <string name="swipe_right_to_dismiss" translatable="false">Swipe right to Dismiss, or left to Snooze.</string>

    <string name="notification_permission_required" >Notification Permission required</string>
    <string name="go_to_settings">Go to settings</string>
    <!--  Time here  -->
    <string name="min_15">15 Min</string>
    <string name="min_30">30 Min</string>
    <string name="hour_1">1 Hour</string>
    <string name="day_1">1 Day</string>
    <string name="day_2">2 Days</string>
    <string name="day_3">3 Days</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="reminder_name_et_hint">Enter reminder name</string>
    <string name="reminder_desc_et_hint">Enter description</string>
    <string name="reminder_remind_time_text">Remind me on the day</string>
    <string name="reminder_date_tv_text">Date</string>
    <string name="reminder_list_text">List</string>
    <string name="reminder_date_value_tv_text">tue 18 jul. 2024 г. 8:25 AM</string>
    <string name="reminder_repeat_tv_text">Repeat</string>
    <string name="reminder_flag_tv_text">Flag</string>
    <string name="reminder_color_text">Color</string>
    <string name="not_selected_color_list_item">Not selected</string>
    <string name="red_color_list_item">Red</string>
    <string name="orange_color_list_item">Orange</string>
    <string name="light_blue_color_list_item">Cyan</string>
    <string name="blue_color_list_item">Blue</string>
    <string name="dark_blue_color_list_item">Dark-blue</string>
    <string name="light_green_color_list_item">Light-green</string>
    <string name="green_color_list_item">Green</string>
    <string name="dark_green_color_list_item">Dark-green</string>
    <string name="yellow_color_list_item">Yellow</string>
    <string name="violet_color_list_item">Purple</string>
    <string name="light_purple_color_list_item">Light-purple</string>
    <string name="purple_color_list_item">Purple</string>
    <string name="dark_purple_color_list_item">Dark-purple</string>
    <string name="never_time_list_item">Never</string>
    <string name="five_min_time_list_item">Every 5 minutes</string>
    <string name="every_15_min_time_list_item">Every 15 minutes</string>
    <string name="every_30_min_time_list_item">Every half hour</string>
    <string name="every_hour_time_list_item">Every hour</string>
    <string name="every_12_hours_time_list_item">Every 12 hours</string>
    <string name="every_day_time_list_item">Every day</string>
    <string name="every_week_time_list_item">Every week</string>
    <string name="every_month_time_list_item">Every month</string>
    <string name="every_6_month_time_list_item">Every 6 months</string>
    <string name="every_year_time_list_item">Every year</string>
    <!--    -->

    <string-array name="time_options">
        <item>Никогда</item>
        <item>Каждые 5 минут</item>
        <item>Каждые 15 минут</item>
        <item>Каждые полчаса</item>
        <item>Каждый час</item>
        <item>Каждые 12 часов</item>
        <item>Ежедневно</item>
        <item>Еженедельно</item>
        <item>Ежемесячно</item>
        <item>Каждые полгода</item>
        <item>Ежегодно</item>
    </string-array>

    <!--  Strings for grid items  -->
    <string name="current_day">Today</string>
    <string name="planned">Planned</string>
    <string name="all">All</string>
    <string name="with_flag">With flag</string>
    <string name="no_time">No time</string>
    <string name="my_lists">My lists</string>
    <string name="add_list">Add new list</string>
    <string name="without_group">Without group</string>

    <string name="nothing_found">Nothing found</string>
    <string name="edit">Edit list</string>
    <string name="add_list_abbr">Add list</string>
    <string name="add_list_hint">New list</string>
    <string name="deletion_error">Failed to delete task</string>
    <string name="name_shouldnt_be_empty">The name cannot be empty</string>
    <string name="date_or_period_should_be_selected">The reminder date and/or frequency must be selected</string>
    <string name="group_should_be_selected">The list must be selected</string>
    <string name="color_should_be_selected">The color must be chosen</string>
    <string name="not_selected">Not selected</string>
    <string name="create">Create</string>


</resources>